Kube YAML/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
    targetPort : 3306
  selector:
    app: mysql
  type: ClusterIP
