Kube YAML/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app
spec:
  rules:
  - http:
      paths:
        - path: /employees/?(.*)   //Redirect all request to backend (backend service name)
          backend:
            serviceName: backend
            servicePort: 8080
